<resources>
    <string-array name="array_loan_stage">
        <item>Pre-Approval</item>
    </string-array>
    <string name="app_name">Colaba</string>
    <string name="api_key">AIzaSyBzPEiQOTReBzy6W1UcIyHApPu7_5Die6w </string>
    <string name="colaba">Colaba</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="wrong_credential">Wrong Credential</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_verification_code">Mobile Verification Code</string>
    <string name="password">Password</string>
    <string name="face_id">Face ID Login</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="verify">VERIFY</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="continue_to">Continue</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="one_minute_ago">1 minute ago</string>
    <string name="login_with_another_account">Login with another account</string>
    <string name="sign_in_with_password">Sign in with Password</string>
    <string name="send_invitation">Send Invitation</string>
    <string-array name="array_occupancy_type">
        <item>Primary Residence</item>
        <item>Second Home</item>
        <item>Investment Property</item>
    </string-array>
    <string-array name="array_property_type">
        <item>Single Family Property</item>
        <item>Condominium</item>
        <item>Townhouse</item>
        <item>Cooperative</item>
        <item>Manufactured Home</item>
        <item>Duplex (2 Unit)</item>
        <item>Triplex (3 Unit)</item>
        <item>Quadplex (4 Unit)</item>
    </string-array>
    <string-array name="doc_list_types">
        <item>Preapproval Letters</item>
        <item>Credit Reports</item>
    </string-array>
    <string-array name="array_property_status">
        <item>Retained</item>
        <item>Pending Sale</item>
    </string-array>
    <string name="invite_real_estate_agent">Invite Real Estate Agent</string>
    <string name="share_loan_app_link">Share Loan Application Link</string>
    <string name="settings">Settings</string>
    <string name="loanapplicationstarted">Loan Application Started </string>
    <string name="loanapplicationsubmitted">Loan Application Submitted </string>
    <string name="loanFund">Loan  Funded</string>
    <string name="mobileappnotificationsettings">Mobile App Notification Settings</string>
    <string name="document_submit">Document Submit</string>
    <string name="document_submit_notifiaction">Document Submit Notification</string>
    <string name="minsdealy">30 mins delayed</string>
    <string name="notification_off">Off</string>
    <string name="immediate">Immediate</string>
    <string name="ten_mins">10 mins</string>
    <string name="twenty_mins">20 mins</string>
    <string name="thirty_mins">30 mins</string>
    <string name="send_pre_approval_letter">Send Pre-Approval Letter</string>
    <string name="send_pre_qualification_letter">Send Conditional Pre-Qualification Letter</string>
    <string name="send_pre_qual_letter">Send Conditional Pre-Qual Letter</string>
    <string name="send_conditional_letter">Send Conditional Approval Letter</string>
    <string name="pursuant_to_tac1">Pursuant To 7 Tac &amp;81.201(A)</string>
    <string name="pursuant_to_tac2">Pursuant 7 TAC &amp;81.201(b)</string>
    <string name="race">Race</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="sex">Sex</string>
    <string name="add_current_address">Add Current Residence</string>
    <string name="add_previous_address">Add Previous Residence</string>
    <string name="mailing_address_added">Mailing address has been added</string>
    <string name="new_application_created">New application has been created</string>
    <string name="doc_filter_all">All</string>
    <string name="doc_filter_in_draft">In Draft</string>
    <string name="doc_filter_borrower_to_do">Borrower To Do</string>
    <string name="doc_filter_pending">Pending</string>
    <string name="doc_filter_completed">Completed</string>
    <string name="doc_filter_started">Started</string>
    <string name="doc_filter_manually_added">Manually Added</string>
    <string name="no_doc_uploaded">No documents uploaded yet</string>
    <string name="no_doc_found">No documents found</string>
    <string name="doc_sub_notification">Document Submit Notification</string>
    <string name="delete_prev_address">Are you sure you want to delete Richard\'s Previous Address?</string>
    <string name="delete_current_address">Are you sure you want to delete Richard\'s Current Address?</string>
    <string name="docs_top_cell">docs_top_cell</string>
    <string name="docs_search_cell">docs_search_cell</string>
    <string name="asset_top_cell">asset_top_cell</string>
    <string name="asset_middle_cell">asset_middle_cell</string>
    <string name="asset_bottom_cell">asset_bottom_cell</string>
    <string name="plus_three">+3</string>
    <string name="actions_pending">Most Actions Pending</string>
    <string name="recent_activity">Most Recent Activity (Default)</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="primary_borrower_info">Primary Borrower Info</string>
    <string name="primary_borrower">Primary Borrower</string>
    <string name="resend_invitation">Resend Invitation</string>
    <string name="send_letter">Send Letter</string>
    <string name="pre_approval_letter">Pre-Approval</string>
    <string name="borrower_a_to_z">Primary Borrower Last Name (A to Z)</string>
    <string name="borrower_z_to_a">Primary Borrower Last Name (Z to A)</string>
    <string name="application">Application</string>
    <string name="documents">Documents</string>
    <string name="review_documents">Review Documents</string>
    <string name="documents_small">documents</string>
    <string name="conversation">Conversations</string>
    <string name="archive">Archive</string>
    <string name="assets_income"> ASSETS &amp; INCOME</string>
    <string name="income">Income</string>
    <string name="real_estate_owned">Real Estate Owned</string>
    <string name="add_real_estate_owned">Add Real Estate Owned</string>
    <string name="add_subject_property">Add Subject Property</string>
    <string name="pipeline">Pipeline</string>
    <string name="assigned_to_me">Assigned to Me</string>
    <string name="assign_application_to">Assign Application To</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login credentials not verified</string>
    <string name="email_format_error">Invalid Email, Please try again…</string>
    <string name="email_empty_error"> Empty Email, Please try again…</string>
    <string name="bottom_email_error">This email and/or phone number is already associated with a contact.</string>
    <string name="password_empty_error">Password Empty, Please try again…</string>
    <string name="password_error">Invalid Password, Please try again…</string>
    <string name="password_length_error">Invalid Password, Length too short…</string>
    <string name="place_order">Place Order</string>
    <string name="test_id">test1</string>
    <string name="empty"> </string>
    <string name="send_the_borrower">Send the borrower a pre-approval letter, allowing them to place an offer on their dream home.</string>
    <string name="ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate eros odio, elementum ultrices magna ornare eu.</string>
    <string name="in_what_state">In what state was this relationship formed?</string>
    <string name="letter_loan_amount">Letter Loan Amount</string>
    <string name="letter_down_payment">Letter Down Payment</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="letter_expiry_date">Letter Expiration Date (MM/DD/YYYY)</string>
    <string name="has_subject_property_identified">Has a Subject Property been identified?</string>
    <string name="reviewed_applicant_report">Reviewed prospective applicant’s / applicant’s credit report and credit score</string>
    <string name="have_you_reviewed_applicant_report">Have you reviewed the prospective applicant’s / applicant’s credit report and credit score?</string>
    <string name="verified_applicant_income">Verified prospective applicant’s / applicant’s income</string>
    <string name="verified_applicants_available_cash">Verified prospective applicant’s / applicant’s available cash to close</string>
    <string name="verified_applicants_debts_and_assets">Verified prospective applicant’s / applicant’s debts and other assets</string>
    <string name="what_info_provided">What type of information has been provided to you?</string>
    <string name="available_cash_to_close">Available cash to close</string>
    <string name="debts">Debts</string>
    <string name="non_permanent_resident_alien">Non Permanent Resident Alien</string>
    <string name="was_richard">Was he ever activated during their tour of duty?</string>
    <string name="last_date_of_service">Last date of service / tour</string>
    <string name="set_letter_ondemand">Set Letter On-Demand</string>
    <string name="letter_on_demand_text">Allow borrowers to generate their own pre-approval letters after setting loan limits below</string>
    <string name="max_loan_amount">Max Loan Amount</string>
    <string name="max_down_payment">Max Down Payment</string>
    <string name="max_expiry_date">Max Expiration Date (MM/DD/YYYY)</string>
    <string name="max_purchase_price">Max Purchase Price</string>
    <string name="test_password">123</string>
    <string name="test_cell">test_cell</string>
    <string name="good_morning"> Good Morning </string>
    <string name="dashboard"> DashBoard Screen </string>
    <string name="user_name"> Jonny Leo </string>
    <string name="dummy_phone_num">(458) 458-8789</string>
    <string name="dummy_email">jsmith@example.com</string>
    <string name="dummy_minute">08</string>
    <string name="dummy_seconds">:  30</string>
    <string name="good_evening_james">James</string>
    <string name="current_residence">Current Residence</string>
    <string name="previous_residence">Previous Residence</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="purchase">Purchase</string>
    <string name="user_data_does_not_exit">Invalid email or password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="unmarried_addendum">Unmarried Addendum</string>
    <string name="citizenship">Citizenship</string>
    <string name="us_citizen">US Citizen</string>
    <string name="pr_green_card">Permanent Resident Alien (Green Card)</string>
    <string name="non_pr">Non Permanent Resident Alien</string>
    <string name="visa_status">Visa Status</string>
    <string name="others">Others</string>
    <string name="military_service">Military Service</string>
    <string name="service_lastdate">Last date of service / tour</string>
    <string name="active_duty_personel">Active Duty Personnel</string>
    <string name="national_guard">Reserve Or National Guard</string>
    <string name="veteran">Veteran</string>
    <string name="surviving_spouse">Surviving Spouse</string>
    <string name="subject_property">Subject Property</string>
    <string name="subject_property_address">Subject Property Address</string>
    <string name="mixed_use_property">Mixed Use Property</string>
</resources>