<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_unmarried">

    <fragment
        android:id="@+id/navigation_primary_borrower_info"
        android:name="com.rnsoft.colabademo.activities.borroweraddresses.info.PrimaryBorrowerInfoFragment"
        android:label="@string/primary_borrower_info"
        tools:layout="@layout/primary_borrower_info_layout" />

    <fragment
        android:id="@+id/navigation_current_address"
        android:name="com.rnsoft.colabademo.CurrentResidenceFragment"
        android:label="@string/current_residence"
        tools:layout="@layout/current_residence_layout" />

   <fragment
        android:id="@+id/navigation_mailing_address"
        android:name="com.rnsoft.colabademo.MailingAddressFragment"
        android:label="@string/mailing_address"
        tools:layout="@layout/mailing_address_layout" />

    <fragment
        android:id="@+id/navigation_non_permanent"
        android:name="com.rnsoft.colabademo.NonPermanentFragment"
        android:label="@string/non_pr"
        tools:layout="@layout/non_permenant_resident_layout" />

    <fragment
        android:id="@+id/navigation_reserve"
        android:name="com.rnsoft.colabademo.ReserveFragment"
        android:label="@string/mailing_address"
        tools:layout="@layout/reserve_layout" />

    <fragment
        android:id="@+id/navigation_unmarried"
        android:name="com.rnsoft.colabademo.UnMarriedFragment"
        android:label="@string/unmarried_addendum"
        tools:layout="@layout/unmarried_layout" />

    <fragment
        android:id="@+id/navigation_active_duty"
        android:name="com.rnsoft.colabademo.ActiveDutyFragment"
        android:label="@string/active_duty_personel"
        tools:layout="@layout/active_duty_layout" />


    <fragment
        android:id="@+id/navigation_test_fields"
        android:name="com.rnsoft.colabademo.TestFieldsFragment"
        android:label="@string/test_id"
        tools:layout="@layout/test_fields_layout" />

</navigation>