<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_invite_agent"
            android:icon="@drawable/ic_invite_real_estate_agent"
            android:title="@string/invite_real_estate_agent" />

        <item
            android:id="@+id/share_app_link"
            android:icon="@drawable/ic_share_app_link"
            android:title="@string/share_loan_app_link" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


<!--        <item-->
<!--            android:id="@+id/nav_document"-->
<!--            android:icon="@drawable/ic_settings"-->
<!--            android:title="@string/settings" />-->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>