<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subject_property_navigation"
    app:startDestination="@+id/nav_sub_property">

    <fragment
        android:id="@+id/nav_sub_property"
        android:name="com.rnsoft.colabademo.SubjectPropertyFragment"
        android:label="@string/subject_property"
        tools:layout="@layout/subject_property" />

    <fragment
        android:id="@+id/nav_sub_property_address"
        android:name="com.rnsoft.colabademo.SubPropertyAddressFragment"
        android:label="@string/subject_property_address"
        tools:layout="@layout/subject_property_address" />

    <fragment
        android:id="@+id/nav_mixed_use_property"
        android:name="com.rnsoft.colabademo.MixedUsePropertyFragment"
        android:label="@string/mixed_use_property"
        tools:layout="@layout/mixed_use_property" />

</navigation>