<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/citizenship"
        android:textAlignment="center"
        android:textColor="@color/txt_primary_info"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/rg_marital_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/marital_status_unmarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/us_citizen"
            android:textColor="@color/txt_color_app_headings"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/marital_status_married"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/pr_green_card"
            android:textColor="@color/txt_color_app_headings"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/marital_status_divorced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/non_pr"
            android:textColor="@color/txt_color_app_headings"
            android:textSize="14sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_unmarried_addendum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_holder_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/unmarried_addendum_ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/visa_status"
            android:textColor="@color/txt_primary_info"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/unmarried_addendum_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/others"
            android:textColor="@color/txt_color_app_headings"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>