<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colaba_loan_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_info_screen"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tab_top_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_grey_cross" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/doc_sub_notification"
            android:textColor="@color/grey_color_one"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/tab_top_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12sp"
            android:background="@color/colaba_app_border_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/header_info_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/not_off"
                style="@style/radiobutton2"
                android:text="@string/notification_off" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/not_immediate"
                style="@style/radiobutton2"
                android:text="@string/immediate" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/not_ten_mins"
                style="@style/radiobutton2"
                android:text="@string/ten_mins" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/not_twenty_mins"
                style="@style/radiobutton2"
                android:text="@string/twenty_mins" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/not_thirty_mins"
                style="@style/radiobutton2"
                android:text="@string/thirty_mins" />

        </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
