<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_all"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:text="@string/doc_filter_all"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector">
        <requestFocus/>
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/doc_filter_in_draft"
        android:textSize="13sp"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:gravity="start|center"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/filter_blue"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/doc_filter_borrower_to_do"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:focusableInTouchMode="true"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/colaba_red_color"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/doc_filter_started"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:focusableInTouchMode="true"
        android:gravity="start|center"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/filter_yellow"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/doc_filter_pending"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:focusableInTouchMode="true"
        android:gravity="start|center"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/colaba_apptheme_blue"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/doc_filter_completed"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:focusableInTouchMode="true"
        android:gravity="start|center"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/filter_green"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/doc_filter_manually_added"
        android:textSize="13sp"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:focusableInTouchMode="true"
        android:gravity="start|center"
        android:drawableStart="@drawable/circle_medium"
        android:drawableTint="@color/filter_grey"
        android:background="@drawable/selector_filter_btns"
        android:textColor="@color/doc_filter_text_color_selector"
        />

</LinearLayout>